--- a/index.html
+++ b/index.html
@@ -10,18 +10,24 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
 
-  <title>Hello, world!</title>
+  <title>Videos</title>
+  <style>
+    video {
+      max-width: 100%;
+      height: auto;
+    }
+  </style>
 </head>
 
 <body>
   <div class="jumbotron jumbotron-fluid">
     <div class="container">
-      <h1 class="display-4">Weather</h1>
-      <p class="lead">Based on your location, this application will display the weather.</p>
+      <h1 class="display-4">Videos</h1>
+      <p class="lead">Here are some videos you have hosted on AWS using LAMBDA</p>
     </div>
   </div>
   <center>
-  <div class="card" style="width: 18rem;">
+  <!-- <div class="card" style="width: 18rem;">
     <img id='topimage' class="card-img-top" src="" alt="Card image cap">
     <div class="card-body">
       <h5 id='title' class="card-title"></h5>
@@ -30,7 +36,14 @@
       <li id='temp' class="list-group-item"></li>
       <li id='wind' class="list-group-item"></li>
     </ul>
-  </div>
+  </div> -->
+  <video class="video-fluid z-depth-1" width="960" height="720" controls>
+    <source src="http://techslides.com/demos/sample-videos/small.mp4" type="video/mp4">
+  </video>
+  <!-- https://video.dailymail.co.uk/video/1418450360/2015/02/1418450360_4056782948001_nerdist--1424015378606.mp4 -->
+  <video class="video-fluid z-depth-1" width="960" height="720" controls>
+    <source src="https://video.dailymail.co.uk/video/1418450360/2015/02/1418450360_4056782948001_nerdist--1424015378606.mp4" type="video/mp4">
+  </video>
   </center>
 
   <!-- Optional JavaScript -->
