--- a/index.html
+++ b/index.html
@@ -26,25 +26,14 @@
       <p class="lead">Here are some videos you have hosted on AWS using LAMBDA</p>
     </div>
   </div>
-  <center>
-  <!-- <div class="card" style="width: 18rem;">
-    <img id='topimage' class="card-img-top" src="" alt="Card image cap">
-    <div class="card-body">
-      <h5 id='title' class="card-title"></h5>
-    </div>
-    <ul class="list-group list-group-flush">
-      <li id='temp' class="list-group-item"></li>
-      <li id='wind' class="list-group-item"></li>
-    </ul>
-  </div> -->
-  <video class="video-fluid z-depth-1" width="960" height="720" controls>
-    <source src="http://techslides.com/demos/sample-videos/small.mp4" type="video/mp4">
-  </video>
-  <!-- https://video.dailymail.co.uk/video/1418450360/2015/02/1418450360_4056782948001_nerdist--1424015378606.mp4 -->
-  <video class="video-fluid z-depth-1" width="960" height="720" controls>
-    <source src="https://video.dailymail.co.uk/video/1418450360/2015/02/1418450360_4056782948001_nerdist--1424015378606.mp4" type="video/mp4">
-  </video>
-  </center>
+  <div id='videocol' style="text-align: center;">
+    <video class="video-fluid z-depth-1" width="960" height="720" controls>
+      <source src="http://techslides.com/demos/sample-videos/small.mp4" type="video/mp4">
+    </video>
+    <video class="video-fluid z-depth-1" width="960" height="720" controls>
+      <source src="https://video.dailymail.co.uk/video/1418450360/2015/02/1418450360_4056782948001_nerdist--1424015378606.mp4" type="video/mp4">
+    </video>
+  </div>
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
