--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
 
+  <!-- unpkg : use the latest version of Video.js -->
+  <link href="https://unpkg.com/video.js/dist/video-js.min.css" rel="stylesheet">
+  <script src="https://unpkg.com/video.js/dist/video.min.js"></script>
+
   <title>Videos</title>
   <style>
-    video {
-      max-width: 100%;
-      height: auto;
+    div.videocontent {
+      width:90%; 
+      max-width:960px;
     }
   </style>
 </head>
@@ -26,14 +30,19 @@
       <p class="lead">Here are some videos you have hosted on AWS using LAMBDA</p>
     </div>
   </div>
-  <div id='videocol' style="text-align: center;">
-    <video class="video-fluid z-depth-1" width="960" height="720" controls>
-      <source src="http://techslides.com/demos/sample-videos/small.mp4" type="video/mp4">
-    </video>
-    <video class="video-fluid z-depth-1" width="960" height="720" controls>
-      <source src="https://video.dailymail.co.uk/video/1418450360/2015/02/1418450360_4056782948001_nerdist--1424015378606.mp4" type="video/mp4">
-    </video>
-  </div>
+  <center>
+    <div class="videocontent">
+      <video id="my-player"
+            class="video-js vjs-default-skin vjs-big-play-centered"
+            width="960"
+            controls
+            preload="auto"
+            data-setup='{"fluid": true}'
+            responsive>
+        <source src="https://content.jwplatform.com/manifests/yp34SRmf.m3u8" type="application/x-mpegURL">
+      </video>
+    </div>
+  </center>
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -43,6 +52,7 @@
     crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
+    
   <script src="js/index.js"></script>
 </body>
 
